# landing-prototype

./: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
tools/google-ads/: .env.example  README.md  pyproject.toml  requirements.txt
tools/google-ads/credentials/: README.md
tools/google-ads/docs/: account-setup-walkthrough.md  conversion-qa-checklist.md  full-account-preflight-audit.md  launch-qa-checklist.md  multi-market-build.md  offline-conversions.md
tools/google-ads/output/: README.md
tools/google-ads/scripts/: account_snapshot.py  check_negative_conflicts.py  export_assets.py  export_campaigns.py  export_conversion_actions.py  export_search_terms.py  generate_editor_import.py  generate_final_url_matrix.py  generate_market_specs.py  list_accessible_customers.py  run_preflight_audit.py  test_account_access.py
tools/google-ads/specs/: bakersfield-en.yaml  bakersfield-es.yaml  fontana-en.yaml  fontana-es.yaml  fresno-en.yaml  fresno-es.yaml  lancaster-en.yaml  lancaster-es.yaml  markets.yaml  modesto-en.yaml  modesto-es.yaml  ontario-en.yaml  ontario-es.yaml  oxnard-en.yaml  oxnard-es.yaml  palmdale-en.yaml  palmdale-es.yaml  riverside-en.yaml  riverside-es.yaml  salinas-en.yaml  salinas-es.yaml  san-bernardino-en.yaml  san-bernardino-es.yaml  stockton-en.yaml  stockton-es.yaml  victorville-en.yaml  victorville-es.yaml  visalia-en.yaml  visalia-es.yaml
tools/google-ads/tests/: fake_google_ads.py  test_config.py  test_create_flow.py  test_create_guards.py  test_safety.py  test_spec_validation.py  test_tracking.py
(+112 files in other folders)
